--- a/css/hebrew.css
+++ b/css/hebrew.css
@@ -1,9 +1,9 @@
 @font-face {
 	font-family: 'Ezra SIL SR';
-	src: url('fonts/ezrasilsr-webfont.eot?#iefix') format('embedded-opentype'),
-	     url('fonts/ezrasilsr-webfont.woff') format('woff'), 
-	     url('fonts/ezrasilsr-webfont.ttf')  format('truetype'),
-	     url('fonts/ezrasilsr-webfont.svg#EzraSILSR') format('svg');
+	src: url('../fonts/ezrasilsr-webfont.eot?#iefix') format('embedded-opentype'),
+	     url('../fonts/ezrasilsr-webfont.woff') format('woff'), 
+	     url('../fonts/ezrasilsr-webfont.ttf')  format('truetype'),
+	     url('../fonts/ezrasilsr-webfont.svg#EzraSILSR') format('svg');
     }
     
     .ezra {
