--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -9703,6 +9703,11 @@ a.text-dark:hover, a.text-dark:focus {
 .masthead {
   padding-top: calc(6rem + 74px);
   padding-bottom: 6rem;
+  background-image: url(../img/header-bg.jpg);
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  background-size: cover;
 }
 
 .masthead .masthead-heading {
@@ -9722,6 +9727,11 @@ a.text-dark:hover, a.text-dark:focus {
   .masthead {
     padding-top: calc(6rem + 104px);
     padding-bottom: 6rem;
+    background-image: url(../img/header-bg.jpg);
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-position: center center;
+    background-size: cover;
   }
   .masthead .masthead-heading {
     font-size: 4rem;
