--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -9703,6 +9703,10 @@ a.text-dark:hover, a.text-dark:focus {
 .masthead {
   padding-top: calc(6rem + 74px);
   padding-bottom: 6rem;
+  
+}
+
+.img-header {
   background-image: url(../img/header-bg.jpg);
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -9727,6 +9731,9 @@ a.text-dark:hover, a.text-dark:focus {
   .masthead {
     padding-top: calc(6rem + 104px);
     padding-bottom: 6rem;
+  }
+
+  .img-header {
     background-image: url(../img/header-bg.jpg);
     background-repeat: no-repeat;
     background-attachment: scroll;
